logging/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
    - port: 9300
      targetPort: 9300
  type: LoadBalancer
